--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -144,6 +144,7 @@ me:
     parameters: 'Parámetros'
     form:
         displayName: 'Quiero aparecer como'
+        profilePicture: 'Foto de perfil'
         notificationPreference: 'Preferencias de notificación'
         choices:
             email: 'Web y correo electrónico'
