[#149] - Add coaster's former names field in admin and display them on coaster page

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -60,6 +60,7 @@ coaster:
         cost: 'Kosten'
         kiddie: 'Kinder'
         indoor: 'Indoor'
+        formerNames: 'Ehemalige Namen'
     parkcoaster: 'Auch in {name}'
     video:
         title: 'Onride Video'
