--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -56,6 +56,7 @@ coaster:
         cost: 'Coût'
         kiddie: 'Kiddie'
         indoor: 'Indoor'
+        formerNames: 'Anciens noms'
     parkcoaster: 'Coasters de {name}'
     video:
         title: 'Vidéo Onride'
