feat: Implement review reporting and upvoting functionality
- Added ReviewReport entity and CRUD controller for managing review reports in the admin dashboard.
- Updated DashboardController to include a link to the Review Reports section.
- Enhanced ReviewCrudController to disable the creation of new reviews.
- Introduced new JavaScript functionality for handling upvotes and report actions on reviews.
- Created a new template for rendering review items with upvote and report options.
- Updated translations for review reporting and upvoting messages in multiple languages.
- Refactored review display templates to improve layout and usability.
- Added new CSS classes for better styling of review components.
- Updated Webpack configuration to include new JavaScript entry for translator functionality.

--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -238,7 +238,7 @@ review:
     update: 'Edit'
     delete: 'Delete'
     last: 'Latest reviews'
-    all: 'See all →'
+    all: 'See all'
     ridden_at: 'Ride date'
     upvote: 'Upvote this review'
     report: 'Report this review'
@@ -252,6 +252,9 @@ review:
         other: 'Other'
     cancel: 'Cancel'
     submit_report: 'Submit Report'
+    report_success: 'Thank you for your report. Our team will review it shortly.'
+    report_error: 'An error occurred while submitting your report.'
+    remove_upvote: 'Remove upvote'
     form:
         title: 'Review about {name}'
 
