Feature: report & upvote a review (#164)
* first step upvote & report for reviews

* feat: Implement review reporting and upvoting functionality

- Added ReviewReport entity and CRUD controller for managing review reports in the admin dashboard.
- Updated DashboardController to include a link to the Review Reports section.
- Enhanced ReviewCrudController to disable the creation of new reviews.
- Introduced new JavaScript functionality for handling upvotes and report actions on reviews.
- Created a new template for rendering review items with upvote and report options.
- Updated translations for review reporting and upvoting messages in multiple languages.
- Refactored review display templates to improve layout and usability.
- Added new CSS classes for better styling of review components.
- Updated Webpack configuration to include new JavaScript entry for translator functionality.

* chore: Upgrade api-platform/core to version 4.0 and update related dependencies

* refactor: Improve review score update logic and enhance review submission button styling

* fix send review button

* refactor: Reduce review pagination limit from 100 to 50

* update translator build

* refactor: Remove console log

--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -191,6 +191,22 @@ review:
     delete: 'Borrar'
     last: 'Últimas reseñas'
     all: 'Ver todo →'
+    ridden_at: 'Fecha de viaje'
+    upvote: 'Votar por esta reseña'
+    report: 'Reportar esta reseña'
+    report_title: 'Reportar Reseña'
+    report_reason: 'Motivo del reporte'
+    reason:
+        offensive: 'Contenido ofensivo'
+        inappropriate: 'Lenguaje inapropiado'
+        incorrect: 'Información incorrecta'
+        spam: 'Spam'
+        other: 'Otro'
+    cancel: 'Cancelar'
+    submit_report: 'Enviar Reporte'
+    report_success: 'Gracias por tu reporte. Nuestro equipo lo revisará en breve.'
+    report_error: 'Se produjo un error al enviar tu reporte.'
+    remove_upvote: 'Quitar voto'
 
 users:
     ratings:
