--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -235,12 +235,27 @@ review:
     cons: 'And its main cons?'
     comment: 'Want to tell us more about your ride?'
     language: 'Language of the review'
-    send: 'Send my review'
+    send: 'Add my review'
     update: 'Edit'
     delete: 'Delete'
     last: 'Latest reviews'
-    all: 'See all →'
+    all: 'See all'
     ridden_at: 'Ride date'
+    upvote: 'Upvote this review'
+    report: 'Report this review'
+    report_title: 'Report Review'
+    report_reason: 'Reason for reporting'
+    reason:
+        offensive: 'Offensive content'
+        inappropriate: 'Inappropriate language'
+        incorrect: 'Incorrect information'
+        spam: 'Spam'
+        other: 'Other'
+    cancel: 'Cancel'
+    submit_report: 'Submit Report'
+    report_success: 'Thank you for your report. Our team will review it shortly.'
+    report_error: 'An error occurred while submitting your report.'
+    remove_upvote: 'Remove upvote'
     form:
         title: 'Review about {name}'
 
