#162 display reviews different languages (#163)
* [#162] - Fix user's reviews list template

* [#162] - Display reviews in different languages depending on a profile setting

* [#162] - CS Fixer

* [#162] - Update api-platform/core

* [#162] - Fix api-platform config

* [#162] - Fix parameters

* [#162] - Fix conditions

* [#162] - Fix function name

* [#162] - Fix getUser

* [#162] - Resolve conflicts with main

* [#165] - Remove order by score for reviews

---------

Co-authored-by: Florian Blond <florian.blond@gmail.com>

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -173,6 +173,8 @@ me:
             metric: 'Internationale Einheitensystem'
             imperial: 'Britische Einheitensystem'
             label: 'Anzeigen von Entfernungen und Statistiken in'
+        displayReviewsInAllLanguages:
+            label: 'Anzeigen in verschiedenen Sprachen verfasste Bewertungen'
         addTodayDateWhenRating:
             label: 'Füge das heutige Datum zu einer Bewertung hinzu'
         apiKey:
