--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -70,6 +70,7 @@ coaster:
         button: 'Lade ien Bild hoch'
         all: 'Alle Bilder ansehen'
     location: 'Standort'
+    relocations: 'Andere Standorte'
 
 image_upload:
     title: 'Lade ein Bild von {coaster} hoch'
