--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -59,6 +59,7 @@ coaster:
         button: 'Subir una foto'
         all: 'Ver todas las fotos'
     location: 'Localización'
+    relocations: 'Otras localizaciones'
 
 image_upload:
     title: 'Sube una foto de {coaster}'
