--- a/translations/validators+intl-icu.en.yml
+++ b/translations/validators+intl-icu.en.yml
@@ -1,2 +1,4 @@
 top_coaster.duplicate: "{coaster} appears several times. Please remove duplicates."
 contact.recaptcha: "You must check the box 'I am not a robot'"
+relocation.duplicate: "Another relocation group contains {coaster}"
+relocation.short: "Relocation need minimum 2 coasters"
