--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -72,7 +72,7 @@ coaster:
         button: Subir una foto
         all: Ver todas las fotos
     location: Localización
-    relocations: 'Otras localizaciones'
+    relocations: Otras localizaciones
 
 image_upload:
     title: 'Sube una foto de {coaster}'
