--- a/translations/learnMoreRanking+intl-icu.en.yml
+++ b/translations/learnMoreRanking+intl-icu.en.yml
@@ -1,7 +1,7 @@
-title: 'How the ranking works?'
+title: 'How does the ranking works?'
 brief:
-    title: 'Captain’s ranking in brief'
-    text: '<p>Captain Coaster’s ranking is based on a <b>pairwise comparison system</b>. The comparisons are deduced from your Tops and Ratings. The more detailed they are, the better!</p>
+    title: 'Captain Coaster''s ranking in brief'
+    text: '<p>Captain Coaster''s ranking is based on a <b>pairwise comparison system</b>. The comparisons are deduced from your Tops and Ratings. The more detailed they are, the better!</p>
         <p>The Top is more precise whereas ratings are faster to use. In order to improve your influence on the ranking, we recommend you to <b>rate all your ridden coasters</b>, and then to <b>order your highest rated coasters</b> in your Top.</p>'
 principles:
     title: 'Ranking principles'
