[#192] - Fix french translation

--- a/translations/messages+intl-icu.fr.yml
+++ b/translations/messages+intl-icu.fr.yml
@@ -237,7 +237,7 @@ top:
         more: Voir le détail
         updated: mis à jour
         by: par
-        infotitle: 'Toutes tes tops sont ici !'
+        infotitle: 'Tous tes tops sont ici !'
         info: 'Les tops, ça permet de faire connaître aux autres ses goûts, comme les meilleurs RMC de la planète, ou les pires kiddies d’Espagne, ou peut-être les meilleurs water coasters bleus avec launch magnétique ! Tout est possible, et chaque top peut ensuite être partagé.'
         create_first: Create mon premier Top Coasters
         create: Créer un nouveau top
